## Process this file with automake to produce Makefile.in
include $(top_srcdir)/include.mk
include $(top_srcdir)/ncklib/ncklib.mk

if PROT_NCACN

# Makefile for connection orientated transports

lib_LTLIBRARIES=libprot_ncacn.la

libprot_ncacn_la_SOURCES=cnassoc.c cnbind.c cncall.c cncasgsm.c \
 cncassm.c cncclsm.c cncthd.c cnfbuf.c cnid.c cninit.c cnmgmt.c \
 cnnet.c cnp.c cnpkt.c cnrcvr.c cnsasgsm.c cnsassm.c cnsclsm.c \
 cnsm.c cnxfer.c


endif
